--- a/part4/styles.css
+++ b/part4/styles.css
@@ -1,8 +1,3 @@
-/* 
-  This is a SAMPLE File to get you started. Follow the instructions on the project to complete the tasks. 
-  You'll probably need to override some of theese styles.
-*/
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -19,6 +14,10 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1rem;
+}
+
+.login-button {
+	float: right;
 }
 
 nav a {
