--- a/part4/styles.css
+++ b/part4/styles.css
@@ -30,11 +30,11 @@ main {
     padding: 2rem;
 }
 
-.place-card {
-  border: 1px solid #ccc;
+.place-card, .review-card {
+  border: 1px solid #ddd;
   border-radius: 10px;
-  padding: 1rem;
-  margin: 1rem;
+  padding: 10px;
+  margin: 20px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   width: 250px;
   text-align: center;
